--- a/src/paper/paper.Rmd
+++ b/src/paper/paper.Rmd
@@ -2,6 +2,12 @@
 title: "pp4rs assignment example"
 author: '@lachlandeer'
 date: "February 24, 2019"
+header-includes:
+   - \usepackage{bbm}
+   - \usepackage{subfig}
+   - \usepackage{dcolumn}
+   - \usepackage{amsthm}
+   - \usepackage{amsmath}
 output: pdf_document
 ---
 
@@ -9,22 +15,11 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Introduction
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Summary Plots
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r fig-sub, echo = FALSE, fig.cap = 'Graphical depiction of first stage and reduced form for IV estimates of the economic return to schooling using quarter of birth', fig.subcap = c('Subcaption1', 'Subcaption2'), fig.show = "hold", out.width = '.60\\linewidth', fig.asp = 1, fig.ncol = 1}
+knitr::include_graphics( c("../../out/figures/education_by_cohort.pdf",
+                            "../../out/figures/earnings_by_cohort.pdf"))
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
