--- a/src/paper/paper.Rmd
+++ b/src/paper/paper.Rmd
@@ -24,3 +24,7 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::include_graphics( c("../../out/figures/education_by_cohort.pdf",
                             "../../out/figures/earnings_by_cohort.pdf"))
 ```
+
+## Regression Table
+
+\input{../../out/tables/regression_table.tex}
