update author and date in paper

--- a/src/paper/paper.Rmd
+++ b/src/paper/paper.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Replication of Angrist and Krueger (1991)"
 subtitle: "Table 4.1.1 from Mostly Harmless Econometrics"
-author: '@lachlandeer'
-date: "February 24, 2019"
+author: 'Lachlan Deer'
+date: `r format(Sys.time(), "%d %B, %Y")`
 header-includes:
    - \usepackage{bbm}
    - \usepackage{subfig}
