--- a/src/paper/paper.Rmd
+++ b/src/paper/paper.Rmd
@@ -2,7 +2,7 @@
 title: "Replication of Angrist and Krueger (1991)"
 subtitle: "Table 4.1.1 from Mostly Harmless Econometrics"
 author: "Lachlan Deer"
-date: `r format(Sys.time(), "%d %B, %Y")`
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 header-includes:
    - \usepackage{bbm}
    - \usepackage{subfig}
